<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/podcast_padding">

    <ProgressBar
        android:id="@android:id/progress"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:theme="@style/AppTheme.ProgressBar"/>

    <TextView
        android:id="@android:id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/records_more"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:id="@id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@android:id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/records_error"
            android:textAlignment="center"
            android:textAppearance="@style/AppTheme.Text.Medium"/>

        <Button
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/retry"
            android:textAlignment="center"
            android:textAppearance="@style/AppTheme.Text.Medium"/>

    </LinearLayout>


</FrameLayout>