<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player"
    android:layout_width="match_parent"
    android:layout_height="@dimen/player_height"
    android:background="@drawable/player_background"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@android:id/title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingLeft="44dp"
        android:paddingRight="44dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/lorem_ipsum_large"
            android:textAppearance="@style/AppTheme.Title" />

    </RelativeLayout>

    <FrameLayout
        android:id="@android:id/custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/title"
        android:paddingStart="@dimen/player_text_padding"
        android:paddingEnd="@dimen/player_text_padding">

        <TextView
            android:id="@+id/offset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textAppearance="@style/AppTheme.Text.Small" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/lorem_ipsum"
            android:textAppearance="@style/AppTheme.Text.Small" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/rewinding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:scaleType="center"
            android:src="@drawable/rewinding"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/forwarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="60dp"
            android:scaleType="center"
            android:src="@drawable/forwarding"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <ImageView
        android:id="@android:id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/player_padding"
        android:scaleType="center"
        android:src="@drawable/play_selector"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@android:id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:contentDescription="@string/stop"
        android:focusable="true"
        android:padding="@dimen/player_padding"
        android:scaleType="center"
        android:src="@drawable/close_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/custom"
        android:filterTouchesWhenObscured="false"
        android:keepScreenOn="false"
        android:paddingStart="@dimen/player_seekbar_padding"
        android:paddingTop="2dp"
        android:paddingEnd="@dimen/player_seekbar_padding"
        android:paddingBottom="@dimen/podcast_padding"
        android:progressDrawable="@drawable/seekbar"
        android:splitTrack="false"
        android:thumb="@drawable/seekbar_thumb"
        android:thumbOffset="10dp"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>